[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.2.1",
    "cryptography>=46.0.5",
    "fastapi>=0.135.1",
    "jose>=1.0.0",
    "model-stocks",
    "models-stock",
    "mysql-connector-python>=9.6.0",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "requests",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.41.0",
    "yfinance>=1.2.0",
]
